--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome To Santorini</title>
+    <link rel="stylesheet" href="./assets/styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <title>Welcome To Japan</title>
 </head>
 <body>
-    
+    <div class="parallax background-image"></div>
+
+    <nav class="main_nav"> 
+        <div class="logo_wrapper">
+            <img class="nav_logo--image" src="../assets/images/avi.jpg" alt="Logo">
+            <h2 class="nav_logo--text">Explore</h2>
+        </div>
+        <div class="nav_list--wrapper"> 
+            <ul class="main_nav--list">
+                <li class="home"><a class="nav_list--item" href="#">Home</a></li>
+                <li class="explore"><a class="nav_list--item" href="#">Explore</a></li>
+                <li class="eats"><a class="nav_list--item" href="#">Eats</a></li>
+                <li class="contact"><a class="nav_list--item" href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="main_header">
+        <h1 class="main_header--title">Japan.</h1>
+    </header>
+
+    <script src="./assets/scripts/index.js"></script>
 </body>
 </html>
