--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/styles/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <title>Welcome To Japan</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <title>Japan</title>
 </head>
 <body>
-    <div class="parallax background-image"></div>
+    <div class="background-image"></div>
 
     <nav class="main_nav"> 
         <div class="logo_wrapper">
             <img class="nav_logo--image" src="../assets/images/avi.jpg" alt="Logo">
-            <h2 class="nav_logo--text">Explore</h2>
+            <div class="nav_logo--text">Japan</div>
         </div>
         <div class="nav_list--wrapper"> 
             <ul class="main_nav--list">
-                <li class="home"><a class="nav_list--item" href="#">Home</a></li>
-                <li class="explore"><a class="nav_list--item" href="#">Explore</a></li>
-                <li class="eats"><a class="nav_list--item" href="#">Eats</a></li>
+                <li class="explore"><a class="nav_list--item" href="#">Destinations</a></li>
+                <li class="food"><a class="nav_list--item" href="#">Food</a></li>
                 <li class="contact"><a class="nav_list--item" href="#">Contact</a></li>
             </ul>
         </div>
@@ -28,7 +28,13 @@
 
     <header class="main_header">
         <h1 class="main_header--title">Japan.</h1>
+        <p class="header--description">One of the most amazing, friendly and beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
+        <div class="button-wrapper">
+            <a class="button" href="#">Find your destination<i class="icon fas fa-arrow-circle-right"></i></a>
+        </div>
     </header>
+    
+    <secction class="divider"></secction>
 
     <script src="./assets/scripts/index.js"></script>
 </body>
