added images and created the article section

--- a/index.html
+++ b/index.html
@@ -29,13 +29,29 @@
 
         <header class="main_header">
             <h1 class="main_header--title">Japan.</h1>
-            <p class="header--description">One of the most amazing, friendly and beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
+            <p class="header--description">One of the most beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
             <div class="button-wrapper">
                 <a class="button" href="#">Find your destination<i class="icon fas fa-arrow-circle-right"></i></a>
             </div>
         </header>
         
-        <section class="divider"></section>
+        <section class="section-one-wrapper">
+            <div>
+                <h2 class="section_one--title">What's Hot</h2>
+                <p class="section_one--subtext">Check out these stories</p>
+            </div>
+            <div class="article-wrapper">
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+                <div class="article-post"></div>
+            </div>
+        </section>
     </main>
     
     <footer class="main_footer">
