--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
                 <div class="article-post"></div>
             </div>
         </section>
+
+        <section class="section-two-wrapper">
+            <div>
+                <h2 class="section_one--title">Stay Connected</h2>
+                <p class="section_one--subtext">subscribe to our newsletter</p>
+            </div>
+
+            <div class="vid-content-wrapper">
+                <div class="vid-content">
+                    <div class="video-overlay"></div>
+                    <video class="video" src="./assets/videos/clip.mp4" autoplay muted loop></video>
+                </div>
+
+                <div class="link-wrapper">
+                    <a class="journey" href="#">Join The Adventure</a>
+                </div>
+
+                <div class="content-right">
+                    <p class="content-paragraph">Don't forget to subscribe to our newsletter! Stay connected with all things Japan all the time, Be the first to know about new events. Discover stories about art, architecture, design, and more. And receive invites to happenings across the world. </p>
+                    <h3 class="content-heading">How will you join the adventure?</h3>
+                    <a class="content-button" href="#">Subscribe</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-three-wrapper">
+
+        </section>
     </main>
     
     <footer class="main_footer">
