--- a/index.html
+++ b/index.html
@@ -15,70 +15,88 @@
     <main>
         <nav class="main_nav"> 
             <div class="logo_wrapper">
-                <img class="nav_logo--image" src="../assets/images/avi.jpg" alt="Logo">
-                <div class="nav_logo--text">Japan</div>
+                <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
+                <div class="logo_text">Japan</div>
             </div>
-            <div class="nav_list--wrapper"> 
-                <ul class="main_nav--list">
-                    <li class="explore"><a class="nav_list--item" href="#">Destinations</a></li>
-                    <li class="food"><a class="nav_list--item" href="#">Food</a></li>
-                    <li class="contact"><a class="nav_list--item" href="#">Contact</a></li>
+            <div class="nav_list-wrapper"> 
+                <ul class="main_nav-list">
+                    <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
+                    <li class="food"><a class="nav_list-item" href="#">Food</a></li>
+                    <li class="contact"><a class="nav_list-item" href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
 
         <header class="main_header">
-            <h1 class="main_header--title">Japan.</h1>
-            <p class="header--description">One of the most beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
-            <div class="button-wrapper">
+            <h1 class="header_title">Japan.</h1>
+            <p class="header_description">One of the most beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
+            <div class="button_wrapper">
                 <a class="button" href="#">Find your destination<i class="icon fas fa-arrow-circle-right"></i></a>
             </div>
         </header>
         
-        <section class="section-one-wrapper">
+        <section class="section_one-wrapper">
             <div>
-                <h2 class="section_one--title">What's Hot</h2>
-                <p class="section_one--subtext">Check out these stories</p>
+                <h2 class="section_title">What's Hot</h2>
+                <p class="section_subtext">Check out these stories</p>
             </div>
-            <div class="article-wrapper">
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
-                <div class="article-post"></div>
+            <div class="article_wrapper">
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
+                <div class="article_post"></div>
             </div>
         </section>
 
-        <section class="section-two-wrapper">
+        <section class="section_two-wrapper">
             <div>
-                <h2 class="section_one--title">Stay Connected</h2>
-                <p class="section_one--subtext">subscribe to our newsletter</p>
+                <h2 class="section_title">Stay Connected</h2>
+                <p class="section_subtext">subscribe to our newsletter</p>
             </div>
 
-            <div class="vid-content-wrapper">
-                <div class="vid-content">
-                    <div class="video-overlay"></div>
-                    <video class="video" src="./assets/videos/clip.mp4" autoplay muted loop></video>
+            <div class="video_content-wrapper">
+                <div class="vid_content">
+                    <div class="video_overlay"></div>
+                    <video class="video" src="./assets/videos/clip.mp4" style="height:650px" autoplay muted loop></video>
                 </div>
 
-                <div class="link-wrapper">
-                    <a class="journey" href="#">Join The Adventure</a>
+                <div class="video_link-wrapper">
+                    <a class="video_link" href="#">Join The Adventure</a>
                 </div>
 
-                <div class="content-right">
-                    <p class="content-paragraph">Don't forget to subscribe to our newsletter! Stay connected with all things Japan all the time, Be the first to know about new events. Discover stories about art, architecture, design, and more. And receive invites to happenings across the world. </p>
-                    <h3 class="content-heading">How will you join the adventure?</h3>
-                    <a class="content-button" href="#">Subscribe</a>
+                <div class="content_right">
+                    <p class="content_paragraph">Don't forget to subscribe to our newsletter! Stay connected with all things Japan all the time, Be the first to know about new events. Discover stories about art, architecture, design, and more. And receive invites to happenings across the world. </p>
+                    <img class="content_logo" src="./assets/images/avi.jpg" alt="Logo">
+                    <h3 class="content_heading">How will you join the adventure?</h3>
+                    <a class="content_button" href="#">Subscribe</a>
                 </div>
             </div>
         </section>
 
-        <section class="section-three-wrapper">
+            <div>   
+                <h2 class="section_title">Fun Facts</h2>
+                <p class="section_subtext">Learn something new</p>
+            </div>
 
+        <section class="section_three-wrapper"> 
+                <div class="fun_fact-wrapper">
+                    <h2 class="fun_fact-heading">6,800+</h2>
+                    <p class="fun_fact-subtext">Islands Make Up Japan</p>
+                </div>
+                <div class="fun_fact-wrapper">
+                    <h2 class="fun_fact-heading">100+</h2>
+                    <p clas="fun_fact-subtext">Volcanoes Are Found In Japan</p>
+                </div>
+                <div class="fun_fact-wrapper">
+                    <h2 class="fun_fact-heading">2,000,000+</h2>
+                    <p clas="fun_fact-subtext">People Visit Japan Each Month</p>
+                </div>
+            </div>
         </section>
     </main>
     
@@ -91,9 +109,9 @@
                 </ul>
         </nav>
         <div class="footer_icon--list">
-            <a class="footer-icon" href="#"><i class="fab fa-linkedin"></i></a>
-            <a class="footer-icon" href="#"><i class="fab fa-instagram"></i></a> 
-            <a class="footer-icon" href="#"><i class="fab fa-github-square"></i></a> 
+            <a class="footer_icon" href="#"><i class="fab fa-linkedin"></i></a>
+            <a class="footer_icon" href="#"><i class="fab fa-instagram"></i></a> 
+            <a class="footer_icon" href="#"><i class="fab fa-github-square"></i></a> 
         </div>
         <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
     </footer>
