added new styles to buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="header_title">Japan.</h1>
             <p class="header_description">One of the most beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
             <div class="button_wrapper">
-                <a class="button" href="#">Find your destination<i class="icon fas fa-arrow-circle-right"></i></a>
+                <a class="button" href="#">Find your destination</a>
             </div>
         </header>
         
@@ -41,15 +41,87 @@
                 <p class="section_subtext">Check out these stories</p>
             </div>
             <div class="article_wrapper">
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
-                <div class="article_post"></div>
+                <div class="article_post">
+                    <div class="post_overlay">
+                        <div class="post_overlay-content">
+                            <h3 class="post_heading">Tokyo in spring: the best things to see and do:</h3>
+                            <p class="post_description">Spring in Japan means sakura (cherry) blossoms. And that's just one of the reasons to visit Tokyo at this time of year: there are also traditional festivals, sumo, seasonal delicacies and a whole lot more in bloom in the city's parks and gardens.</p>
+                            <a class="overlay_button" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/tokyo-in-spring-the-best-things-to-see-and-do/40625c8c-8a11-5710-a052-1479d276100f" target="_blank">Read More</a>
+                       </div>
+                    </div>
+                </div>
+                <div class="article_post">
+                    <div class="post_overlay">
+                        <div class="post_overlay-content">
+                            <h3 class="post_heading">Best places to see cherry blossoms in Japan:</h3>
+                            <p class="post_description">Springtime in Japan and the country watches and waits for the first sakura (cherry) trees to burst into bloom. Once they do, people flock to parks and squares for hanami (cherry-blossom viewing). The romance is passionate but fleeting, lasting only a week or two.</p>
+                            <a class="overlay_button" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/best-places-to-see-cherry-blossoms-in-japan/40625c8c-8a11-5710-a052-1479d27777ee" target="_blank">Read More</a>
+                       </div>
+                    </div>
+                </div>
+                <div class="article_post">
+                    <div class="post_overlay">
+                        <div class="post_overlay-content">
+                            <h3 class="post_heading">Exploring Ise-Shima: getting off the beaten track in Kansai:</h3>
+                            <p class="post_description">Ise-Shima is famous as the home of Ise-jingū, one of Japan's most revered Shintō shrines, and for many travellers the shrine might be all they see of the area. With its ama diving culture, island life, museums and bucketloads of fresh seafood, there's plenty more to discover in this off-the-beaten-track corner of Kansai.</p>
+                            <a class="overlay_button" href="https://www.lonelyplanet.com/japan/kansai/travel-tips-and-articles/exploring-ise-shima-getting-off-the-beaten-track-in-kansai/40625c8c-8a11-5710-a052-1479d276c73b" target="_blank">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="article_post">
+                    <div class="post_overlay">
+                        <div class="post_overlay-content">
+                            <h3 class="post_heading">Five must-try dishes from Osaka:</h3>
+                            <p class="post_description">There’s a reason the Japanese call Osaka tenka no daidokoro, or ‘the nation’s kitchen’. If your fantasies of a trip to Japan involve flashing neon lights, raucous nightlife and tempting treats hidden behind almost every darkened doorway or lattice-screen facade, then Osaka is the destination for you.</p>
+                            <a class="overlay_button" href="https://www.lonelyplanet.com/japan/kansai/osaka/travel-tips-and-articles/five-must-try-dishes-from-osaka/40625c8c-8a11-5710-a052-1479d2756b82" target="_blank">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">Tokyo restaurant etiquette: the ultimate guide to dining in Japan’s capital:</h3>
+                                    <p class="post_description">Want to take a deep dive into Tokyo’s famous (and famously amazing) dining scene, but worried about committing some unforgivable gaffe? Here's all you need to know to eat like a local. Hint: it’s not as hard as you might have feared. In fact, once you nail the logic of eating in Tokyo, it all makes a lot of sense.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/tokyo-restaurant-etiquette-the-ultimate-guide-to-dining-in-japans-capital/40625c8c-8a11-5710-a052-1479d27561b1" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">Japan's top 10 culinary locations:</h3>
+                                    <p class="post_description">Unesco recently added Japanese cuisine – known in Japan as washoku – to its Intangible Cultural Heritage list. This puts it equal to French cuisine, the only other national culinary tradition to be so honoured. A journey around Japan reveals the wisdom of Unesco’s decision: every corner of the country boasts something special to eat or drink. Join our tour of Japan’s top 10 gourmet destinations to discover the many flavours of washoku.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/japans-top-10-culinary-locations/40625c8c-8a11-5710-a052-1479d27655fb" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">Handmade in Tōhoku: traditional crafts of northern Japan:</h3>
+                                    <p class="post_description">Japan’s ‘deep north’, the largely rural Tōhoku region is home to craft traditions that have been handed down over generations. A trip to this little-visited swathe of the country offers a chance to see skilled artisans at work – and find a unique souvenir – just a train ride or two from Tokyo.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/northern-honshu/travel-tips-and-articles/handmade-in-tohoku-traditional-crafts-of-northern-japan/40625c8c-8a11-5710-a052-1479d276bba9" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">21 free things to do in Tokyo:</h3>
+                                    <p class="post_description">Exploring the Big Sushi is a mind-blowing experience, but it can also blow your budget. Don't despair – there’s an abundance of things to do and see in Tokyo that don’t cost a single yen. From gardens and temples to contemporary art, sumo practice and a world-famous fish market, you can experience some of the best of Tokyo for free.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/21-free-things-to-do-in-tokyo/40625c8c-8a11-5710-a052-1479d277befc" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">How to live like a local in Tokyo:</h3>
+                                    <p class="post_description">Lonely Planet Local Rebecca Milner moved to Tokyo for ‘just one year'… 15 years ago. She was drawn by the city’s larger-than-life image – all those bright lights and busy streets – but was surprised to discover just how liveable Tokyo really is. She spends her days wandering the back streets, tracking down new restaurants and writing in cafes.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/how-to-live-like-a-local-in-tokyo/40625c8c-8a11-5710-a052-1479d2768619" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
             </div>
         </section>
 
@@ -73,7 +145,7 @@
                     <p class="content_paragraph">Don't forget to subscribe to our newsletter! Stay connected with all things Japan all the time, Be the first to know about new events. Discover stories about art, architecture, design, and more. And receive invites to happenings across the world. </p>
                     <img class="content_logo" src="./assets/images/avi.jpg" alt="Logo">
                     <h3 class="content_heading">How will you join the adventure?</h3>
-                    <a class="content_button" href="#">Subscribe</a>
+                    <a class="content_button" href="#">Subscribe To Our Newsletter</a>
                 </div>
             </div>
         </section>
@@ -109,9 +181,9 @@
                 </ul>
         </nav>
         <div class="footer_icon--list">
-            <a class="footer_icon" href="#"><i class="fab fa-linkedin"></i></a>
-            <a class="footer_icon" href="#"><i class="fab fa-instagram"></i></a> 
-            <a class="footer_icon" href="#"><i class="fab fa-github-square"></i></a> 
+            <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i class="fab fa-instagram"></i></a> 
+            <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i class="fab fa-github-square"></i></a> 
         </div>
         <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
     </footer>
