--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
         <nav class="main_nav"> 
             <div class="logo_wrapper">
                 <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-                <div class="logo_text">Japan</div>
+                <div class="logo_text">Japan | <span class="logo_text-span">Adventure Awaits</span></div>
             </div>
             <div class="nav_list-wrapper"> 
                 <ul class="main_nav-list">
                     <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
-                    <li class="food"><a class="nav_list-item" href="#">Food</a></li>
-                    <li class="contact"><a class="nav_list-item" href="#">Contact</a></li>
+                    <li class="explore"><a class="nav_list-item" href="#">Activites</a></li>
+                    <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
+                    <li class="subscribe"><a class="nav_list-item" href="#">Subscribe</a></li>
                 </ul>
             </div>
         </nav>
 
         <header class="main_header">
             <h1 class="header_title">Japan.</h1>
-            <p class="header_description">One of the most beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, Theres something for everyone.</p>
+            <p class="header_description">One of the most beautiful countries in the world. From the busy city of Tokyo to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, There's an adventure for everyone.</p>
             <div class="button_wrapper">
                 <a class="button" href="#">Find your destination</a>
             </div>
@@ -38,7 +39,7 @@
         <section class="section_one-wrapper">
             <div>
                 <h2 class="section_title">What's Hot</h2>
-                <p class="section_subtext">Check out these stories</p>
+                <p class="section_subtext">Check Out These Stories</p>
             </div>
             <div class="article_wrapper">
                 <div class="article_post">
@@ -128,7 +129,7 @@
         <section class="section_two-wrapper">
             <div>
                 <h2 class="section_title">Stay Connected</h2>
-                <p class="section_subtext">subscribe to our newsletter</p>
+                <p class="section_subtext">Subscribe To Our Newsletter</p>
             </div>
 
             <div class="video_content-wrapper">
@@ -142,7 +143,7 @@
                 </div>
 
                 <div class="content_right">
-                    <p class="content_paragraph">Don't forget to subscribe to our newsletter! Stay connected with all things Japan all the time, Be the first to know about new events. Discover stories about art, architecture, design, and more. And receive invites to happenings across the world. </p>
+                    <p class="content_paragraph">Don't forget to subscribe to our newsletter! Stay connected with all things Japan, all the time, Be the first to know about new events. Discover stories about art, architecture, design, and more. And receive invites to happenings across the world. </p>
                     <img class="content_logo" src="./assets/images/avi.jpg" alt="Logo">
                     <h3 class="content_heading">How will you join the adventure?</h3>
                     <a class="content_button" href="#">Subscribe To Our Newsletter</a>
@@ -152,7 +153,7 @@
 
             <div>   
                 <h2 class="section_title">Fun Facts</h2>
-                <p class="section_subtext">Learn something new</p>
+                <p class="section_subtext">Learn a Fun Fact!</p>
             </div>
 
         <section class="section_three-wrapper"> 
@@ -172,12 +173,12 @@
         </section>
     </main>
     
-    <footer class="main_footer">
+    <footer id="footer" class="main_footer">
         <nav class="footer_nav">
                 <ul class="footer_nav--list">
                     <li><a class="footer_nav--item" href="#">Destinations</a></li>
+                    <li><a class="footer_nav--item" href="#">Activites</a></li>
                     <li><a class="footer_nav--item" href="#">Food</a></li>                    
-                    <li><a class="footer_nav--item" href="#">Contact</a></li>
                 </ul>
         </nav>
         <div class="footer_icon--list">
