finished most of the wodth media queries

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/styles/index.css">
+    <link rel="stylesheet" href="./assets/styles/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Japan</title>
@@ -16,7 +17,7 @@
         <nav class="main_nav"> 
             <div class="logo_wrapper">
                 <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-                <div class="logo_text">Japan | <span class="logo_text-span">Adventure Awaits</span></div>
+                <div class="logo_text">Japan</div>
             </div>
             <div class="nav_list-wrapper"> 
                 <ul class="main_nav-list">
@@ -91,7 +92,7 @@
                         <div class="post_overlay">
                                 <div class="post_overlay-content">
                                     <h3 class="post_heading">Japan's top 10 culinary locations:</h3>
-                                    <p class="post_description">Unesco recently added Japanese cuisine – known in Japan as washoku – to its Intangible Cultural Heritage list. This puts it equal to French cuisine, the only other national culinary tradition to be so honoured. A journey around Japan reveals the wisdom of Unesco’s decision: every corner of the country boasts something special to eat or drink. Join our tour of Japan’s top 10 gourmet destinations to discover the many flavours of washoku.</p>
+                                    <p class="post_description">Unesco recently added Japanese cuisine – known in Japan as washoku – to its Intangible Cultural Heritage list. This puts it equal to French cuisine, the only other national culinary tradition to be so honoured. A journey around Japan reveals the wisdom of Unesco’s decision: every corner of the country boasts something special to eat or drink.</p>
                                     <a class="overlay_button" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/japans-top-10-culinary-locations/40625c8c-8a11-5710-a052-1479d27655fb" target="_blank">Read More</a>
                                </div>
                             </div>
@@ -123,6 +124,33 @@
                                </div>
                             </div>
                 </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">Six lesser-known reasons to visit Japan's Oita Prefecture:</h3>
+                                    <p class="post_description">Oita, a prefecture on Japan's southern-most island of Kyūshū, is world-famous for its incredible hot springs. Towns like Beppu host bathers from around the world. Here are six great less-visited spots in Oita Prefecture.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/six-lesser-known-reasons-to-visit-japans-oita-prefecture/40625c8c-8a11-5710-a052-1479d2754b08" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">Five reasons to visit Iwate on your Japan trip</h3>
+                                    <p class="post_description">A beautiful natural landscape from mountains to dramatic coast, a traditional craft-making culture, and regional food specialities that include a noodle challenge are just a few reasons to detour north and explore Iwate Prefecture as part of a Japan itinerary.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/northern-honshu/travel-tips-and-articles/five-reasons-to-visit-iwate-on-your-japan-trip/40625c8c-8a11-5710-a052-1479d27542a9" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
+                <div class="article_post">
+                        <div class="post_overlay">
+                                <div class="post_overlay-content">
+                                    <h3 class="post_heading">Visiting Japan's ghost island of Hashima:</h3>
+                                    <p class="post_description">The small island of Hashima was once bustling with a community of 5000 people, who lived alongside the mines they worked. Abandoned in the 1970s, the island and its buildings had been left to the elements.</p>
+                                    <a class="overlay_button" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/how-to-live-like-a-local-in-tokyo/40625c8c-8a11-5710-a052-1479d2768619" target="_blank">Read More</a>
+                               </div>
+                            </div>
+                </div>
             </div>
         </section>
 
@@ -135,7 +163,7 @@
             <div class="video_content-wrapper">
                 <div class="vid_content">
                     <div class="video_overlay"></div>
-                    <video class="video" src="./assets/videos/clip.mp4" style="height:650px" autoplay muted loop></video>
+                    <video class="video" src="./assets/videos/clip.mp4" autoplay muted loop></video>
                 </div>
 
                 <div class="video_link-wrapper">
@@ -151,7 +179,7 @@
             </div>
         </section>
 
-            <div>   
+            <div class="fun_fact-labels">   
                 <h2 class="section_title">Fun Facts</h2>
                 <p class="section_subtext">Learn a Fun Fact!</p>
             </div>
