--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
                     <li class="explore"><a class="nav_list-item" href="#">Activites</a></li>
                     <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
-                    <li class="subscribe"><a class="nav_list-item" href="#">Subscribe</a></li>
+                    <li class="subscribe"><a class="nav_list-item" href="/subscribe.html">Subscribe</a></li>
                 </ul>
             </div>
         </nav>
 
         <header class="main_header">
-            <h1 class="header_title">Japan.</h1>
+            <h1 class="header_title">Japan</h1>
             <p class="header_description">One of the most beautiful countries in the world. From the busy city of Tokyo
                 to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, There's an adventure for
                 everyone.</p>
@@ -235,7 +235,7 @@
                 </div>
 
                 <div class="video_link-wrapper">
-                    <a class="video_link" href="#">Join The Adventure</a>
+                    <a class="video_link" href="./subscribe.html">Join The Adventure</a>
                 </div>
 
                 <div class="content_right">
@@ -244,7 +244,7 @@
                         architecture, design, and more. And receive invites to happenings across the world. </p>
                     <img class="content_logo" src="./assets/images/avi.jpg" alt="Logo">
                     <h3 class="content_heading">How will you join the adventure?</h3>
-                    <a class="content_button" href="#">Subscribe To Our Newsletter</a>
+                    <a class="content_button" href="./subscribe.html">Subscribe To Our Newsletter</a>
                 </div>
             </div>
         </section>
@@ -256,15 +256,15 @@
 
         <section class="section_three-wrapper">
             <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">6,800+</h2>
+                <h2 class="fun_fact-heading">6,800 +</h2>
                 <p class="fun_fact-subtext">Islands Make Up Japan</p>
             </div>
             <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">100+</h2>
+                <h2 class="fun_fact-heading">100 +</h2>
                 <p clas="fun_fact-subtext">Volcanoes Are Found In Japan</p>
             </div>
             <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">2,000,000+</h2>
+                <h2 class="fun_fact-heading">2,000,000 +</h2>
                 <p clas="fun_fact-subtext">People Visit Japan Each Month</p>
             </div>
             </div>
@@ -277,6 +277,7 @@
                 <li><a class="footer_nav--item" href="#">Destinations</a></li>
                 <li><a class="footer_nav--item" href="#">Activites</a></li>
                 <li><a class="footer_nav--item" href="#">Food</a></li>
+                <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </nav>
         <div class="footer_icon--list">
@@ -289,7 +290,7 @@
         </div>
         <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
     </footer>
-    <script src="./assets/scripts/index.js"></script>
+    <script src="./assets/scripts/index/index.js"></script>
 </body>
 
 </html>
