--- a/subscribe.html
+++ b/subscribe.html
@@ -5,26 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/styles/subscribe/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Subscribe | Japan</title>
 </head>
 
 <body>
-    <nav class="main_nav">
-        <div class="logo_wrapper">
-            <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-            <div class="logo_text">Japan</div>
-        </div>
-        <div class="nav_list-wrapper">
-            <ul class="main_nav-list">
-                <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
-                <li class="explore"><a class="nav_list-item" href="#">Activites</a></li>
-                <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
-                <li class="subscribe"><a class="nav_list-item" href="#">Subscribe</a></li>
+    <div class="backsplash"></div>
+
+    <main>
+        <nav class="main_nav">
+            <div class="logo_wrapper">
+                <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
+                <div class="logo_text">Japan</div>
+            </div>
+            <div class="nav_list-wrapper">
+                <ul class="main_nav-list">
+                    <li class="home"><a class="nav_list-item" href="/index.html">Home</a></li>
+                    <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
+                    <li class="explore"><a class="nav_list-item" href="#">Activites</a></li>
+                    <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <header class="main_header">
+            <h1 class="header_title">Japan</h1>
+            <p class="header_description">Join Our Newsletter</p>
+        </header>
+
+        <section class="content_wrapper">
+            <div class="form_wrap">
+                <form class="form_signup form">
+                    <img class="form-logo" src="./assets/images/avi.jpg" alt="Logo">
+                    <h1 class="form-title">Subscribe</h1>
+                    <label for="inputFirstName"></label>
+                    <input type="text" id="inputFirstName" class="form_control" placeholder="First Name" required=""
+                        autofocus="">
+                    <label for="inputLastName"></label>
+                    <input type="text" id="inputLastName" class="form_control" placeholder="Last Name" required="">
+                    <label for="inputPhoneNumber"></label>
+                    <input type="text" id="inputPhoneNumber" class="form_control" placeholder="Phone Number"
+                        required="">
+                    <label for="inputEmail"></label>
+                    <input type="email" id="inputEmail" class="form_control" placeholder="Email Address" required="">
+                    <textarea id="inputMessage" class="form_control" placeholder="Leave us a message!"></textarea>
+                    <button class="form_button" id="submitButton" type="submit">Submit</button>
+                    <p class="form_copyright">© Japan.io</p>
+                </form>
+            </div>
+        </section>
+
+        <section class="section_three-wrapper">
+            <div class="fun_fact-wrapper">
+                <h2 class="fun_fact-heading">Connect with us social media</h2>
+                <p class="fun_fact-subtext">linked down below</p>
+            </div>
+        </section>
+
+    </main>
+
+    <footer id="footer" class="main_footer">
+        <nav class="footer_nav">
+            <ul class="footer_nav--list">
+                <li><a class="footer_nav--item" href="#">Destinations</a></li>
+                <li><a class="footer_nav--item" href="#">Activites</a></li>
+                <li><a class="footer_nav--item" href="#">Food</a></li>
             </ul>
+        </nav>
+        <div class="footer_icon--list">
+            <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+            <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
+                    class="fab fa-instagram"></i></a>
+            <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
+                    class="fab fa-github-square"></i></a>
         </div>
-    </nav>
+        <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
+    </footer>
 
-
+    <script src="./assets/scripts/subscribe/index.js"></script>
 </body>
 
 </html>
