--- a/subscribe.html
+++ b/subscribe.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/styles/subscribe/index.css">
+    <link rel="stylesheet" href="./assets/styles/subscribe/styles/index.css">
+    <link rel="stylesheet" href="./assets/styles/subscribe/styles/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -58,10 +59,10 @@
             </div>
         </section>
 
-        <section class="section_three-wrapper">
-            <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">Connect with us social media</h2>
-                <p class="fun_fact-subtext">linked down below</p>
+        <section class="contact_section-wrapper">
+            <div class="contact_wrapper">
+                <h2 class="contact_heading">Connect with us social media</h2>
+                <p class="contact_subtext">linked down below</p>
             </div>
         </section>
 
