made some changes to media queries

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </header>
 
         <section class="section_one-wrapper">
-            <div>
+            <div class="story_labels">
                 <h2 class="section_title">What's Hot</h2>
                 <p class="section_subtext">Check Out These Stories</p>
             </div>
@@ -112,8 +112,7 @@
                                 capital:</h3>
                             <p class="post_description">Want to take a deep dive into Tokyo’s famous (and famously
                                 amazing) dining scene, but worried about committing some unforgivable gaffe? Here's all
-                                you need to know to eat like a local. Hint: it’s not as hard as you might have feared.
-                                In fact, once you nail the logic of eating in Tokyo, it all makes a lot of sense.</p>
+                                you need to know to eat like a local.</p>
                             <a class="overlay_button"
                                 href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/tokyo-restaurant-etiquette-the-ultimate-guide-to-dining-in-japans-capital/40625c8c-8a11-5710-a052-1479d27561b1"
                                 target="_blank">Read More</a>
@@ -223,7 +222,7 @@
         </section>
 
         <section class="section_two-wrapper">
-            <div>
+            <div class="connected_labels">
                 <h2 class="section_title">Stay Connected</h2>
                 <p class="section_subtext">Subscribe To Our Newsletter</p>
             </div>
@@ -256,40 +255,40 @@
 
         <section class="section_three-wrapper">
             <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">6,800 +</h2>
+                <h2 class="fun_fact-heading">6,800+</h2>
                 <p class="fun_fact-subtext">Islands Make Up Japan</p>
             </div>
             <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">100 +</h2>
+                <h2 class="fun_fact-heading">100+</h2>
                 <p clas="fun_fact-subtext">Volcanoes Are Found In Japan</p>
             </div>
             <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">2,000,000 +</h2>
+                <h2 class="fun_fact-heading">2,000,000+</h2>
                 <p clas="fun_fact-subtext">People Visit Japan Each Month</p>
             </div>
             </div>
         </section>
-    </main>
 
-    <footer id="footer" class="main_footer">
-        <nav class="footer_nav">
-            <ul class="footer_nav--list">
-                <li><a class="footer_nav--item" href="#">Destinations</a></li>
-                <li><a class="footer_nav--item" href="#">Activites</a></li>
-                <li><a class="footer_nav--item" href="#">Food</a></li>
-                <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
-            </ul>
-        </nav>
-        <div class="footer_icon--list">
-            <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
-                    class="fab fa-linkedin"></i></a>
-            <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
-                    class="fab fa-instagram"></i></a>
-            <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
-                    class="fab fa-github-square"></i></a>
-        </div>
-        <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
-    </footer>
+        <footer id="footer" class="main_footer">
+            <nav class="footer_nav">
+                <ul class="footer_nav--list">
+                    <li><a class="footer_nav--item" href="#">Destinations</a></li>
+                    <li><a class="footer_nav--item" href="#">Activites</a></li>
+                    <li><a class="footer_nav--item" href="#">Food</a></li>
+                    <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
+                </ul>
+            </nav>
+            <div class="footer_icon--list">
+                <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
+                <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
+                        class="fab fa-github-square"></i></a>
+            </div>
+            <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
+        </footer>
+    </main>
     <script src="./assets/scripts/index/index.js"></script>
 </body>
 
