--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/styles/index/index.css">
-    <link rel="stylesheet" href="./assets/styles/index/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -20,14 +19,13 @@
         <nav class="main_nav">
             <div class="logo_wrapper">
                 <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-                <div class="logo_text">Japan</div>
+                <a class="logo_text" href="#"><div>Japan</div></a>
             </div>
             <div class="nav_list-wrapper">
                 <ul class="main_nav-list">
-                    <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
-                    <li class="explore"><a class="nav_list-item" href="#">Activites</a></li>
+                    <li class="explore"><a class="nav_list-item" href="/activites.html">Activites</a></li>
                     <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
-                    <li class="subscribe"><a class="nav_list-item" href="/subscribe.html">Subscribe</a></li>
+                    <li class="subscribe"><a class="nav_list-item" href="/subscribe.html">Join Our Newsletter</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,7 +36,7 @@
                 to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, There's an adventure for
                 everyone.</p>
             <div class="button_wrapper">
-                <a class="button" href="#">Find your destination</a>
+                <a class="button" href="/activites.html">View Activities</a>
             </div>
         </header>
 
@@ -272,8 +270,7 @@
         <footer id="footer" class="main_footer">
             <nav class="footer_nav">
                 <ul class="footer_nav--list">
-                    <li><a class="footer_nav--item" href="#">Destinations</a></li>
-                    <li><a class="footer_nav--item" href="#">Activites</a></li>
+                    <li><a class="footer_nav--item" href="/activites.html">Activites</a></li>
                     <li><a class="footer_nav--item" href="#">Food</a></li>
                     <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
                 </ul>
