--- a/subscribe.html
+++ b/subscribe.html
@@ -20,13 +20,11 @@
         <nav class="main_nav">
             <div class="logo_wrapper">
                 <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-                <div class="logo_text">Japan</div>
+                <a class="logo_text" href="/index.html"><div>Japan</div></a>
             </div>
             <div class="nav_list-wrapper">
                 <ul class="main_nav-list">
-                    <li class="home"><a class="nav_list-item" href="/index.html">Home</a></li>
-                    <li class="explore"><a class="nav_list-item" href="#">Destinations</a></li>
-                    <li class="explore"><a class="nav_list-item" href="#">Activites</a></li>
+                    <li class="explore"><a class="nav_list-item" href="/activites.html">Activites</a></li>
                     <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
                 </ul>
             </div>
@@ -71,8 +69,8 @@
     <footer id="footer" class="main_footer">
         <nav class="footer_nav">
             <ul class="footer_nav--list">
-                <li><a class="footer_nav--item" href="#">Destinations</a></li>
-                <li><a class="footer_nav--item" href="#">Activites</a></li>
+                <li><a class="footer_nav--item" href="/index.html">Home</a></li>
+                <li><a class="footer_nav--item" href="/activites.html">Activites</a></li>
                 <li><a class="footer_nav--item" href="#">Food</a></li>
             </ul>
         </nav>
