--- a/activites.html
+++ b/activites.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Destinations | Japan</title>
+    <title>Activities | Japan</title>
 </head>
 
 <body>
-    <div class="backsplash"></div>
+    <div class="background-image"></div>
 
     <nav class="main_nav">
         <div class="logo_wrapper">
-            <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
             <a class="logo_text" href="/index.html"><div>Japan</div></a>
         </div>
         <div class="nav_list-wrapper">
@@ -30,8 +29,13 @@
 
     <header class="main_header">
         <h1 class="header_title">Japan</h1>
-        <p class="header_description">Explore Activites</p>
+        <p class="header_description">Explore Activites &amp; Destinations</p>
     </header>
+
+    <div class="section_labels">
+        <h2 class="section_title">What's Hot</h2>
+        <p class="section_subtext">Check Out These Stories</p>
+    </div>
 
     <script src="./activities/index.js"></script>
 </body>
