changed styles back to default

--- a/activites.html
+++ b/activites.html
@@ -17,6 +17,7 @@
 
     <nav class="main_nav">
         <div class="logo_wrapper">
+            <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
             <a class="logo_text" href="/index.html"><div>Japan</div></a>
         </div>
         <div class="nav_list-wrapper">
