--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 
     <main>
         <nav class="main_nav">
+            <input type="checkbox" id="nav" class="hidden">
+            <label for="nav" class="nav_button">
+                <i></i>
+                <i></i>
+                <i></i>
+            </label>
             <div class="logo_wrapper">
                 <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
                 <a class="logo_text" href="#"><div>Japan</div></a>
             </div>
             <div class="nav_list-wrapper">
-                <ul class="main_nav-list">
-                    <li class="explore"><a class="nav_list-item" href="/activites.html">Activites</a></li>
-                    <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
-                    <li class="subscribe"><a class="nav_list-item" href="/subscribe.html">Join Our Newsletter</a></li>
+                <ul class="nav-list">
+                    <li class="nav_list-items activities"><a class="list_item-link" href="/activities.html">Activites</a></li>
+                    <li class="nav_list-items food"><a class="list_item-link" href="#">Things To Eat</a></li>
+                    <li class="nav_list-items subscribe"><a class="list_item-link" href="/subscribe.html">Join Our Newsletter</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,7 +42,7 @@
                 to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, There's an adventure for
                 everyone.</p>
             <div class="button_wrapper">
-                <a class="button" href="/activites.html">View Activities</a>
+                <a class="button" href="/activities.html">View Activities</a>
             </div>
         </header>
 
@@ -270,7 +276,7 @@
         <footer id="footer" class="main_footer">
             <nav class="footer_nav">
                 <ul class="footer_nav--list">
-                    <li><a class="footer_nav--item" href="/activites.html">Activites</a></li>
+                    <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
                     <li><a class="footer_nav--item" href="#">Food</a></li>
                     <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
                 </ul>
