--- a/subscribe.html
+++ b/subscribe.html
@@ -23,8 +23,9 @@
             </div>
             <div class="nav_list-wrapper">
                 <ul class="main_nav-list">
-                    <li class="explore"><a class="nav_list-item" href="/activites.html">Activites</a></li>
-                    <li class="food"><a class="nav_list-item" href="#">Things To Eat</a></li>
+                    <li class="activities fade"><a class="nav_list-item" href="/activites.html">Activites</a></li>
+                    <li class="food fade"><a class="nav_list-item" href="#">Things To Eat</a></li>
+                    <li class="newsletter"><a class="nav_list-item" href="#">Newsletter</a></li>
                 </ul>
             </div>
         </nav>
