cleaned up class naming for html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </header>
 
-        <section class="section_one-wrapper">
+        <section class="article_section">
             <div class="story_labels">
                 <h2 class="section_title">What's Hot</h2>
                 <p class="section_subtext">Check Out These Stories</p>
@@ -221,7 +221,7 @@
             </div>
         </section>
 
-        <section class="section_two-wrapper">
+        <section class="newsletter_section">
             <div class="connected_labels">
                 <h2 class="section_title">Stay Connected</h2>
                 <p class="section_subtext">Subscribe To Our Newsletter</p>
@@ -230,14 +230,14 @@
             <div class="video_content-wrapper">
                 <div class="vid_content">
                     <div class="video_overlay"></div>
-                    <video class="video" src="./assets/videos/clip.mp4" autoplay muted loop></video>
+                    <video class="video" src="/assets/videos/clip.mp4" autoplay muted loop></video>
                 </div>
 
                 <div class="video_link-wrapper">
                     <a class="video_link" href="./subscribe.html">Join The Adventure</a>
                 </div>
 
-                <div class="content_right">
+                <div class="content_right-wrapper">
                     <p class="content_paragraph">Don't forget to subscribe to our newsletter! Stay connected with all
                         things Japan, all the time, Be the first to know about new events. Discover stories about art,
                         architecture, design, and more. And receive invites to happenings across the world. </p>
@@ -248,36 +248,35 @@
             </div>
         </section>
 
-        <div class="fun_fact-labels">
+        <div class="fact_labels">
             <h2 class="section_title">Fun Facts</h2>
             <p class="section_subtext">Learn a Fun Fact!</p>
         </div>
 
-        <section class="section_three-wrapper">
-            <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">6,800+</h2>
-                <p class="fun_fact-subtext">Islands Make Up Japan</p>
+        <section class="facts_section">
+            <div class="fact_wrapper">
+                <h2 class="fact_heading">6,800+</h2>
+                <p class="fact_subtext">Islands Make Up Japan</p>
             </div>
-            <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">100+</h2>
-                <p clas="fun_fact-subtext">Volcanoes Are Found In Japan</p>
+            <div class="fact_wrapper">
+                <h2 class="fact_heading">100+</h2>
+                <p clas="fact_subtext">Volcanoes Are Found In Japan</p>
             </div>
-            <div class="fun_fact-wrapper">
-                <h2 class="fun_fact-heading">2,000,000+</h2>
-                <p clas="fun_fact-subtext">People Visit Japan Each Month</p>
-            </div>
+            <div class="fact_wrapper">
+                <h2 class="fact_heading">2,000,000+</h2>
+                <p clas="fact_subtext">People Visit Japan Each Month</p>
             </div>
         </section>
 
-        <footer id="footer" class="main_footer">
+        <footer class="main_footer">
             <nav class="footer_nav">
-                <ul class="footer_nav--list">
-                    <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
-                    <li><a class="footer_nav--item" href="#">Food</a></li>
-                    <li><a class="footer_nav--item" href="/subscribe.html">Newsletter</a></li>
+                <ul class="footer_nav-list">
+                    <li><a class="footer_nav-item" href="/activities.html">Activites</a></li>
+                    <li><a class="footer_nav-item" href="#">Food</a></li>
+                    <li><a class="footer_nav-item" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </nav>
-            <div class="footer_icon--list">
+            <div class="footer_icon-list">
                 <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
                 <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
