added the nav and made my newsletter page responsive

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="logo_text" href="#"><div>Japan</div></a>
             </div>
             <div class="nav_list-wrapper">
-                <ul class="nav-list">
+                <ul class="nav_list">
                     <li class="nav_list-items activities"><a class="list_item-link" href="/activities.html">Activites</a></li>
                     <li class="nav_list-items food"><a class="list_item-link" href="#">Things To Eat</a></li>
-                    <li class="nav_list-items subscribe"><a class="list_item-link" href="/subscribe.html">Join Our Newsletter</a></li>
+                    <li class="nav_list-items subscribe"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </div>
         </nav>
